--- a/ui/src/styles/layout/root.scss
+++ b/ui/src/styles/layout/root.scss
@@ -255,3 +255,26 @@ $logLevels: "trace", "debug", "info", "warn", "error";
 .text-tertiary {
     color: var(--bs-tertiary-color);
 }
+
+.button-top {
+    background: var(--card-bg);
+    border-bottom: 1px solid var(--bs-border-color);
+    padding: calc(var(--spacer) / 2) calc(var(--spacer) * 2);
+    padding-left: calc(var(--spacer) / 2);
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    max-height: 49.5px;
+
+    :deep(.validation) {
+        border: 0;
+        padding-left: calc(var(--spacer) / 2);
+        padding-right: calc(var(--spacer) / 2);
+    }
+
+    :deep(.el-button) {
+        border: 0;
+        padding-left: calc(var(--spacer) / 2);
+        padding-right: calc(var(--spacer) / 2);
+    }
+}
